--- a/css/common.css
+++ b/css/common.css
@@ -31,6 +31,19 @@
   padding: 0px;
   box-sizing: border-box;
 }
+/* scrollbar width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: 1px 2px grey; 
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--third-bg-color); 
+  border-radius: 10px;
+}
 body {
     background-color: var(--primary-bg-color);
     font-family: var(--primary-font);
